--- a/src/Cake.Orchard/Cake.Orchard.nuspec
+++ b/src/Cake.Orchard/Cake.Orchard.nuspec
@@ -11,6 +11,6 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>Copyright 2015</copyright>
-    <tags>Cake Build Orchard</tags>
+    <tags>cake orchard cake-addin cake-build cake-contrib addin script build</tags>
   </metadata>
 </package>
