--- a/src/Cake.Orchard/Cake.Orchard.nuspec
+++ b/src/Cake.Orchard/Cake.Orchard.nuspec
@@ -8,6 +8,7 @@
     <owners>cake-contrib</owners>
     <licenseUrl>https://github.com/cake-contrib/Cake.Orchard/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/cake-contrib/Cake.Orchard</projectUrl>
+    <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/addin/cake-contrib-addin-medium.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>Copyright 2015</copyright>
